--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="viewport" content="user-scalable=no, viewport-fit=cover">
 <title>无名杀</title>
+<script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
+<script src="game/login.js"></script>
 <script src="game/update.js"></script>
 <script src="game/config.js"></script>
 <script src="game/package.js"></script>
 <script src="game/game.js"></script>
+
